# Algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
1sem/course_work/: Backpack.cpp  main.cpp
1sem/course_work/additional/: exceptions.cpp
1sem/course_work/headers/: Item.h
1sem/course_work/tests/: tests.cpp
1sem/lab1/: main.cpp
1sem/lab1/classes/: List.cpp
1sem/lab1/headers/: List.h
1sem/lab1/tests/: testList.cpp
1sem/lab2/: main.cpp
1sem/lab2/classes/: Stack.cpp
1sem/lab2/headers/: Stack.h
1sem/lab2/tests/: testStack.cpp
1sem/lab3/classes/: Tree.cpp
1sem/lab3/headers/: Iterator.h  Tree.h
1sem/lab3/tests/: testTree.cpp
1sem/lab4/: algs.cpp
1sem/lab4/files/: InsertSortTests  QuickSortTests
1sem/lab4/tests/: testAlgs.cpp
2sem/course_work/: test
2sem/course_work/classes/: FlowNetwork.cc
2sem/course_work/headers/: FlowNetwork.h  Queue.h
2sem/course_work/tests/: TestFlowNetwork.cpp
2sem/lab1/: main.cpp
2sem/lab1/classes/: List.cpp  map.cpp
2sem/lab1/headers/: List.h  constants.h  map.h
2sem/lab1/tests/: testMap.cpp
2sem/lab2/: main.cpp
2sem/lab2/classes/: SFTree.cc  ShannonFano.cc  SymbolsList.cc
2sem/lab2/headers/: SFTree.h  ShannonFano.h  SymbolsList.h
2sem/lab2/tests/: TestShanonFano.cc
2sem/lab3/: in  main.cpp
2sem/lab3/classes/: Edges.cc  Graph.cc
2sem/lab3/headers/: Graph.h
2sem/lab3/tests/: TestGraph.cc
